# yuansheng

./: AGENTS.md
RuoYi-Vue/: build.txt  pom.xml
RuoYi-Vue/ruoyi-framework/: pom.xml
RuoYi-Vue/scripts/: check_qingbird_backend_security.py
RuoYi-Vue/sql/: biz_branch_info.sql  biz_cloud_doc.sql  biz_employee.sql  biz_salary_record.sql  biz_settlement.sql  qingbird_demo_cleanup.sql  qingbird_demo_seed.sql  qingbird_schema.sql
RuoYi-Vue3/: .env.development  .env.production  agent.md  package.json  skills.md  vite.config.js
RuoYi-Vue3/src/: main.js  permission.js
desktop-client/: .gitignore  README.md  browser_debug_setup.py  build_exe.ps1  chrome_cookie_store.py  desktop_app.py  direct_api_capture.py  douyin_workload_capture.py  error_sanitizer.py  external_capture.py  jd_workload_capture.py  login_accounts.py  main.py  pdd_workload_capture.py  platform_adapters.py  platform_config.py  qingbird_data_assistant.spec  qn_cookie_refresh.py  requirements-build.txt  requirements.txt  secure_storage.py  shadow_browser.py  sidecar_cli.py  single_instance.py  spider_core.py  startup_manager.py  table_capture.py  upload_client.py  version_info.txt  yuansheng-sidecar.spec
desktop-client/data/: direct_api_capture.template.json
desktop-tauri/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
desktop-tauri/src/: App.vue  (+4 more)
desktop-tauri/src-tauri/: Cargo.toml  installer.nsh  tauri.conf.json
desktop-tauri/src-tauri/capabilities/: default.json
desktop-tauri/src-tauri/src/: main.rs
docs/: qn-cookie-handling.md  release-process.md
(+159 files in other folders)
