[package]
name = "yuansheng-data-assistant"
version = "1.1.11"
description = "远盛数据助手 Tauri desktop shell"
authors = ["Yuansheng"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"



